--- a/publisher/src/main/resources/application.yml
+++ b/publisher/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 logging:
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
+spring:
+  rabbitmq:
+    host: 192.168.111.100 #rabbitMQ ip
+    port: 5672
+    username: itcast
+    password: 123321
+    virtual-host: /
